--- a/20250324/index.html
+++ b/20250324/index.html
@@ -29,13 +29,13 @@
 
         <p>Siendo la extructura aX2 +bx +c</p>
 
-        <label for="numero">Constante "a":</label>
+        <label for="a">Constante "a":</label>
         <input type="number" id="a">
 
-        <label for="numero">Constante "b":</label>
+        <label for="b">Constante "b":</label>
         <input type="number" id="b">
 
-        <label for="numero">Constante "c":</label>
+        <label for="c">Constante "c":</label>
         <input type="number" id="c">
 
         <button id="calculo">Calcular</button>
