--- a/20250324/index.html
+++ b/20250324/index.html
@@ -40,8 +40,8 @@
 
         <button id="calculo">Calcular</button>
 
-        <p>Raiz 1: <span id="raiz1">0</span></p>
-        <p>Raiz 2: <span id="raiz2">0</span></p>
+        <p>Raiz x1: <span id="raiz1">0</span></p>
+        <p>Raiz x2: <span id="raiz2">0</span></p>
         <button id="limpio">Limpiar</button>
     </div>
     <script src="script.js"></script>
